===Montreal Changelog===

1.1.1 (06/13/13)
  *Fixed issue with duplicate stylesheet calls.
  *Removed heading tag theme settings.
  *Removed some obsolete setting defaults in .info file.
  *Improved how the slideshow images respond to different screen sizes.
  *Updated Twitter widget, theme settings and docs for Twitter API 1.1 compatibility. 

1.1 (05/16/13)
  *Updated Drupal Core to 7.22.
  *Removed theme jQuery library in favor of using jQuery Update module (better module compatibility).
  *Removed unecessary Layout and Footer theme settings in favor of using block visibility settings.
  *Added translation function wrappers around all theme-generated text.
  *Sub-theme no longer requires parent theme CSS and JS files to function.
  *Fixed theme setting defaults in .info file causing issues with WAMP installs.
  *Minor CSS tweaks.
  *Updated documentation to reflect changes.

1.0.4 (03/25/13)
  *Updated Drupal Core to 7.21.
  *Updated Google Font embeds to support extended latin characters (where applicable).
  *Firefox-specifc CSS fix for "Portfolio Drag" template.
  *Style tweak for 404 template.

1.0.3 (02/25/13)
  *Fix for minor stripe portfolio bug caused by previous update.

1.0.2 (02/21/13)
	*Updated Drupal Core in full install to 7.20.
	*Added HTML files to download file.
	*Added example sub-theme (Quebec) and sub-theme documentation.
  *Removed block--recent-projects.tpl (not needed).
  *Edited block.tpl to fix missing block/view edit tools when logged in.
  *Additional style/bug fixes and IE improvements.

1.0.1 (02/06/13)
  *Single portfolio item slider now handled by one image field (legacy support for previous method remains).
	*Fixed Undefined Index error in page--node--portfolio-basic.tpl
  *Removed call to missing JS file.
  *Minor responsive CSS tweaks.
  *Updated documentation to clarify some areas. 

1.0 (02/03/13)
  *Initial release.